--- a/web_static/styles/4-filters.css
+++ b/web_static/styles/4-filters.css
@@ -2,7 +2,7 @@
     color: white;
     height: 70px;
     width: 100%;
-    border: 1px #DDDDDD;
+    border: 1px solid #DDDDDD;
     border-radius: 4px;
     display: flex;
     align-items: center;
