[Fix]: fixing the border header section

--- a/web_static/styles/3-header.css
+++ b/web_static/styles/3-header.css
@@ -4,5 +4,5 @@ header{
     background-position: 20px center;
     height: 70px; 
     width: 100%;
-    border-bottom: 1px #CCCCCC;
+    border-bottom: 1px solid #CCCCCC;
 }
