[Feature]: adding mobile responsive

--- a/web_static/styles/4-filters.css
+++ b/web_static/styles/4-filters.css
@@ -25,3 +25,16 @@
 .filters button:hover {
     opacity: 90%;
 }
+
+@media screen and (max-width: 500px) {
+    .filters{
+        width: 100%;
+    }
+
+    .filters button{
+        font-size: 15px;
+        height: 38px;
+        width: 25%;
+        margin-right: 10px;
+    }
+}
