--- a/web_static/styles/5-filters.css
+++ b/web_static/styles/5-filters.css
@@ -51,3 +51,24 @@
     color: #000;
     margin: 2px 0 0 30px;
 }
+
+@media screen and (max-width: 500px) {
+    .filters{
+        width: 100%;
+    }
+
+    .filters button{
+        font-size: 15px;
+        height: 38px;
+        width: 25%;
+        margin-right: 10px;
+    }
+
+    .locations{
+        width: 35%;
+    }
+
+    .amenities{
+        margin-left: -20px;
+    }
+}
