--- a/web_static/styles/7-places.css
+++ b/web_static/styles/7-places.css
@@ -26,3 +26,33 @@
     font-size: 30px;
     color: #000;
 }
+
+@media screen and (max-width: 500px) {
+    .places h1{
+        font-size: 25px;
+    }
+
+    .places article{
+        width: 350px;
+        height: 105vh;
+    }
+
+    .places article h2{
+        font-size: 25px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .places h1{
+        font-size: 25px;
+    }
+
+    .places article{
+        width: 250px;
+        height: 105vh;
+    }
+
+    .places article h2{
+        font-size: 25px;
+    }
+}
